# ava-raytracer

./: .gitignore  .todo  CMakeLists.txt  run
src/: Camera.hpp  Hittable.hpp  Image.cpp  Image.hpp  ObjectManager.hpp  Ray.hpp  Scene.hpp  Vector3.hpp  main.cpp
test/: Image-test.cpp  Ray-test.cpp  Vector-test.cpp
